sandbox/output
OneHundredDoorsTest.java:65: error: cannot find symbol
        assertArrayEquals("1-4-9-16-25-36-49-64-81-100", oneHundredDoors.idsOfOpenedDoorsAfterPassingDoors(100));
                                                                        ^
  symbol:   method idsOfOpenedDoorsAfterPassingDoors(int)
  location: variable oneHundredDoors of type OneHundredDoors
1 error
